# PromptManager

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  README-DEV.md  README.md  gh-workflow-errors.txt  main.py  mypy.ini  noxfile.py  prompt_templates.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-gui.txt  requirements.txt
.github/workflows/: quality-gates.yml
catalog/: __init__.py  prompts.json
cli/: __init__.py  commands.py  gui_launcher.py  parser.py  runtime.py  settings_summary.py  utils.py
config/: __init__.py  config.json  config.template.json  logging.conf  persistence.py  settings.py
core/: __init__.py  analytics_dashboard.py  catalog_importer.py  category_registry.py  embedding.py  exceptions.py  execution.py  factory.py  history_tracker.py  intent_classifier.py  litellm_adapter.py  name_generation.py  notifications.py  prompt_engineering.py  prompt_manager.py  repository.py  retry.py  scenario_generation.py  sharing.py  templating.py
core/prompt_manager/: __init__.py  analytics.py  backends.py  bootstrap.py  categories.py  chains.py  engineering.py  execution.py  execution_history.py  generation.py  lifecycle.py  litellm_helpers.py  maintenance.py  prompt_notes.py  refinement.py  response_styles.py  runtime.py  search.py  state.py  storage.py  versioning.py  workflows.py
core/repository/: __init__.py  base.py  chains.py  executions.py  maintenance.py  notes.py  profiles.py  prompts.py  response_styles.py
core/web_search/: __init__.py  context_formatting.py  models.py  providers.py  service.py
docs/: CHANGELOG.md  README-DEV.md  analysis-brief-2026-04-11-quick-capture-real-input-review-v1.md  analysis-review-2026-04-11-quick-capture-real-input-review-v1.md  canonical-usage-path-v1.md  implementation-brief-2026-04-04-recent-reopen.md  implementation-brief-2026-04-10-context-lead-usage-cue-v1.md  implementation-brief-2026-04-10-credible-source-cue-v1.md  implementation-brief-2026-04-10-fence-unwrap-v1.md  implementation-brief-2026-04-10-fork-baseline-clarity-v1.md  implementation-brief-2026-04-10-fork-difference-cue-v1.md  implementation-brief-2026-04-10-pyproject-only-install-v1.md  implementation-brief-2026-04-10-reuse-payload-tooltip-v1.md  implementation-brief-2026-04-10-similar-match-preview-v1.md  implementation-brief-2026-04-11-blockquote-unwrap-v1.md  implementation-brief-2026-04-11-catalog-readability-typography-v1.md  implementation-brief-2026-04-11-duplicate-reason-cue-v1.md  implementation-brief-2026-04-11-promote-time-likely-duplicate-cue-v1.md  implementation-brief-2026-04-11-prompt-label-strip-v1.md  implementation-brief-2026-04-11-readme-positioning-cleanup-v1.md  implementation-brief-2026-04-11-similarity-strength-cue-v1.md  implementation-brief-2026-04-11-template-variable-cue-v1.md  implementation-brief-2026-04-11-template-workspace-handoff-cue-v1.md  implementation-review-2026-04-06-reuse-polish-v1.md  implementation-review-2026-04-10-product-alignment-and-fork-state.md  implementation-review-2026-04-11-duplicate-reason-cue-v1.md  implementation-review-2026-04-11-prompt-label-strip-v1.md  implementation-review-2026-04-11-readme-positioning-cleanup-v1.md  implementation-review-2026-04-11-template-workspace-handoff-cue-v1.md  next-slice-brief-2026-04-04-draft-inspection-cues.md  next-slice-brief-2026-04-04-draft-promote-normalize.md  next-slice-brief-2026-04-04-promote-similar-check-v1.md  next-slice-brief-2026-04-04-quick-capture-to-draft.md  next-slice-brief-2026-04-04-quick-reuse-handoff-v1.md  next-slice-brief-2026-04-04-recent-reopen.md  next-slice-brief-2026-04-05-capture-provenance-v1.md  next-slice-brief-2026-04-05-usage-cue-v1.md  next-slice-brief-2026-04-06-retrieval-preview-v1.md  product-backlog-ssot.md  product-boundary-alignment-audit-2026-04-04.md  (+4 more)
gui/: __init__.py  analytics_panel.py  appearance_controller.py  application.py  catalog_workflow_controller.py  code_highlighter.py  command_palette.py  dialog_launcher.py  dialogs.py  diff_utils.py  execute_context_dialog.py  history_dialog.py  history_panel.py  language_tools.py  layout_controller.py  layout_state.py  main_view_binder.py  main_view_builder.py  main_view_callbacks_factory.py  main_window.py  main_window_assembler.py  main_window_bootstrapper.py  main_window_bridges.py  main_window_composition.py  main_window_handlers.py  notes_panel.py  notification_controller.py  notifications.py  processing_indicator.py  prompt_actions_controller.py  prompt_editor_flow.py  prompt_generation_service.py  prompt_list_coordinator.py  prompt_list_delegate.py  prompt_list_model.py  prompt_list_presenter.py  prompt_preview.py  prompt_search_controller.py  prompt_templates_dialog.py  quick_action_controller.py  (+17 more)
gui/controllers/: __init__.py  execution_controller.py
gui/dialogs/: base.py  (+14 more)
models/: __init__.py  category_model.py  prompt_chain_model.py  prompt_model.py  prompt_note.py  response_style.py
scripts/: check_tokens.py  validate_settings.py
tests/: __init__.py  conftest.py  test_analytics_dashboard.py  test_analytics_panel_gui.py  test_catalog_export.py  test_catalog_importer.py  test_category_matching.py  test_chroma_telemetry.py  test_command_palette.py  test_draft_promote_dialog.py  test_embedding_provider.py  test_execute_context_history.py  test_execution.py  test_factory_branches.py  test_gui_application.py  test_gui_diff_preview.py  test_history_tracker.py  test_intent_classifier.py  test_language_tools.py  test_main_entry.py  test_main_window_bridges.py  test_name_generation.py  test_notifications.py  test_prompt_actions_controller.py  test_prompt_chain_backend.py  test_prompt_chain_dialog.py  test_prompt_chain_model.py  test_prompt_detail_widget.py  test_prompt_dialog_refinement.py  test_prompt_editor_flow.py  test_prompt_engineering.py  test_prompt_list_model.py  test_prompt_manager_admin.py  test_prompt_manager_analytics.py  test_prompt_manager_branches.py  test_prompt_manager_engineering.py  test_prompt_manager_execution.py  test_prompt_manager_execution_history.py  test_prompt_manager_mixins.py  test_prompt_manager_reset.py  (+26 more)
(+28 files in other folders)
