[project]
name = "prompt-manager"
version = "0.7.0"
description = "Desktop application for cataloguing, searching, and launching AI prompts."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Prompt Manager Team"}]
keywords = ["prompts", "gui", "productivity", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "chromadb==0.4.24",
    "numpy>=1.26.4,<2",
    "pydantic==2.12.3",
    "pydantic-settings==2.2.1",
    "PyYAML==6.0.2",
    "PySide6==6.7.2",
    "redis==5.0.1",
    "litellm==1.61.15",
]

[project.optional-dependencies]
dev = ["pytest==8.2.0", "pytest-cov==4.1.0"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "gui*", "models*"]
exclude = ["tests*", "data*", "PromptManagerBlueprint.txt", "AGENTS.md"]

[tool.setuptools.package-data]
"gui.resources" = ["*.ico"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.(py|pyi)$'
exclude = '^data/'

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "models", "gui", "tests"]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
