[project]
name = "prompt-manager"
version = "0.19.1"
description = "Desktop application for cataloguing, searching, and launching AI prompts."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Prompt Manager Team"}]
keywords = ["prompts", "gui", "productivity", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "chromadb==0.4.24",
    "numpy>=1.26.4,<2",
    "Jinja2==3.1.4",
    "jsonschema==4.23.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.2.1",
    "PyYAML==6.0.2",
    "PySide6==6.7.2",
    "redis==5.0.1",
    "litellm==1.61.15",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.6.1",
    "pyright==1.1.386",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "gui*", "models*"]
exclude = ["tests*", "data*", "PromptManagerBlueprint.txt", "AGENTS.md"]

[tool.setuptools.package-data]
"gui.resources" = ["*.ico"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]
exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
extend-select = ["TCH"]

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "models", "gui", "tests"]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=core --cov-report=xml --cov-report=term-missing --cov-fail-under=80 --n auto"
testpaths = ["tests"]

[tool.pyright]
include = ["main.py", "core", "config", "gui", "models", "tests"]
exclude = ["data"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
useLibraryCodeForTypes = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
