[project]
name = "prompt-manager"
version = "0.21.0"
description = "Desktop application for cataloguing, searching, and launching AI prompts."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Prompt Manager Team"}]
keywords = ["prompts", "gui", "productivity", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "chromadb>=1.3.5",
    "numpy>=2.0.0,<3",
    "Jinja2==3.1.6",
    "jsonschema==4.25.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "PyYAML==6.0.3",
    "PySide6==6.10.1",
    "redis==7.1.0",
    "litellm==1.80.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pyright==1.1.407",
    "ruff==0.14.7",
    "pytest-asyncio==1.3.0",  # Updated to support pytest 9.x
    "hypothesis==6.116.0",
    "respx==0.21.0",
    "vcrpy==6.0.1",
    "pytest-mock==3.14.0",
    "bandit==1.7.9",
    "py-spy==0.3.14",
    "tenacity==9.0.0",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "gui*", "models*"]
exclude = ["tests*", "data*"]

[tool.setuptools.package-data]
"gui.resources" = ["*.ico"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]
exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
extend-select = ["TC", "TCH", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "models", "gui", "tests"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = false

[tool.pytest.ini_options]
# Keep only general options here, e.g.,
# addopts = "-n auto --strict-markers" 

[tool.coverage.run]
# This ensures coverage is measured for 'core' when pytest-cov runs
source = ["core"]

[tool.coverage.report]
# This defines the minimum required coverage
fail_under = 80

[tool.pyright]
include = ["main.py", "core", "config", "gui", "models", "tests"]
exclude = ["data"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "typings"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
useLibraryCodeForTypes = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
